feat(lists): paginate spotify categories, playlists and tracks lists

--- a/public/src/js/templates/music/lists/items/category.html
+++ b/public/src/js/templates/music/lists/items/category.html
@@ -1,6 +1,6 @@
-<a href="<%= category.getUrl() %>" class="list-item list-item-category">
+<a href="<%= model.getUrl() %>" class="list-item list-item-category">
     <div class="image">
-        <img src="<%= category.get('image') %>"/>
-        <div class="name"><%= category.get('name') %></div>
+        <img src="<%= model.get('image') %>"/>
+        <div class="name"><%= model.get('name') %></div>
     </div>
 </a>
