--- a/public/src/js/templates/search.html
+++ b/public/src/js/templates/search.html
@@ -1,6 +1,6 @@
 <div class="view-search">
     <form name="form-search" class="form-search" action="#">
-        <input type="search" name="query" />
+        <input type="search" name="query"<%= query ? ' value="'+query+'"' : '' %>/>
         <button type="submit"><i class="icon icon-search"></i></button>
     </form>
 </div>
