--- a/public/src/scss/views/_music.scss
+++ b/public/src/scss/views/_music.scss
@@ -249,9 +249,13 @@
     color: #fff;
     cursor: pointer;
     display: block;
-    padding: 5px 10px;
+    padding: 2px 10px;
     position: relative;
     transition: background $transition;
+
+    @include media(tablet-big) {
+        padding: 5px 10px;
+    }
 
     .no-touchevents &:hover {
         background: $grayMedium;
@@ -261,7 +265,10 @@
         color: $grayLight;
         font-size: 14px;
         line-height: 18px;
-        padding-top: 5px;
+
+        @include media(tablet-big) {
+            padding-top: 5px;
+        }
 
         a {
             color: $grayLight;
@@ -279,10 +286,14 @@
 
         .name {
             box-sizing: border-box;
-            padding: 10px 5px 5px 0;
+            padding: 0 5px 0 0;
             float: left;
             line-height: 20px;
             width: 80%;
+
+            @include media(tablet-big) {
+                padding: 10px 5px 5px 0;
+            }
 
             .icon {
                 display: inline-block;
@@ -298,8 +309,13 @@
             font-size: 14px;
             float: right;
             width: 20%;
+            line-height: 20px;
             text-align: right;
-            padding: 10px 0 5px 5px;
+            padding: 0 0 0 5px;
+
+            @include media(tablet-big) {
+                padding: 10px 0 5px 5px;
+            }
         }
     }
 
